<resources>
    <string name="app_name">Medical assistant</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="new_write">Новая запись</string>
    <string name="name_write">Название записи</string>
    <string name="writes">Записи</string>
    <string name="diagnosis">Диагностика</string>
    <string name="cancer_1">Рак легких по КТ</string>
    <string name="cancer_2">Рак кожи</string>
    <string name="cancer_3">Рак молочной железы по биопсии</string>
    <string name="cancer_4">Рак молочной железы по МРТ</string>
    <string name="cancer_5">Рак толстой кишки по биопсии</string>
    <string name="cancer_6">Рак полости рта по биопсии</string>
    <string name="news">Новости</string>
    <string name="auth">Авторизация</string>
    <string name="no_acc">Нет аккаунта?</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="sign_up">Регистрация</string>
    <string name="surname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="patronymic">Отчество</string>
    <string name="med">Медицинское учреждение</string>
    <string name="phone">Телефон</string>
    <string name="password_2">Пароль не менее 8 символов</string>
    <string name="password_3">Пароль еще раз</string>
    <string name="question_name">Название записи</string>
    <string name="question_date">Дата приема. Например: 13.12.2009</string>
    <string name="question_surname">Фамилия пациента</string>
    <string name="sign_in">Войти</string>
    <string name="message">Изображение отправлено на диагностику. \n Ожидайте результат</string>
    <string name="fill_fields">Заполните все поля</string>
    <string name="auth_success">Авторизация прошла успешно</string>
    <string name="ex_load_data">Не удалось загрузить данные</string>
    <string name="ex_auth">Не удалось авторизоваться</string>
    <string name="ed_name_info">Введите название записи и текст</string>
    <string name="ex_load_img">Не удалось сохранить изображение</string>
    <string name="data_add">Запись создана</string>
    <string name="data_change">Запись изменена</string>
    <string name="ex_internet">Сервер не отвечает</string>
    <string name="registr_success">Регистрация прошла успешно</string>
    <string name="ex_password_is">Пароли должны совпадать</string>
    <string name="ex_password_short">Слишком короткий пароль</string>
    <string name="ex_registr">Не удалось зарегистрироваться</string>
    <string name="ex_fill_img">Загрузите изображение</string>
    <string name="tv_surname"><![CDATA[<font color=#006060>Фамилия: </font>]]></string>
    <string name="tv_name"><![CDATA[<font color=#006060>Имя: </font>]]></string>
    <string name="tv_patronymic"><![CDATA[<font color=#006060>Отчество: </font>]]></string>
    <string name="tv_med"><![CDATA[<font color=#006060>Медицинское учреждение: </font>]]></string>
    <string name="tv_email"><![CDATA[<font color=#006060>Email: </font>]]></string>
    <string name="tv_phone"><![CDATA[<font color=#006060>Телефон: </font>]]></string>
    <string name="info_write">Текст записи</string>
    <string name="message_sign_in">Идет авторизация. Ожидайте, пожалуйста.</string>
    <string name="patient_name">Имя пациента</string>
    <string name="patient_surname">Фамилия пациента</string>
    <string name="patient_patronymic">Отчество пациента</string>
    <string name="patient_phone">Номер телефона пациента</string>
    <string name="date">Дата приема</string>
    <string name="day">День</string>
    <string name="month">Месяц</string>
    <string name="year">Год</string>
    <string name="ex_date">Дата введене некорректно</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="event_name">Название события</string>
    <string name="event_date">Дата события</string>
    <string name="event_time">Время события</string>
    <string name="time_hint">00</string>
    <string name="add_notify">Создание уведомления</string>
    <string name="notifications">Уведомления</string>
</resources>