<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RegistrInfoFragment"
    android:background="@color/smoky_white"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:orientation="vertical">

        <soup.neumorphism.NeumorphCardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="0.95"
            android:background="@drawable/ic_rect_text"
            app:neumorph_shapeType="flat">

            <EditText
                android:id="@+id/et_surname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/surname"
                android:paddingVertical="@dimen/vertical_padding"
                android:paddingHorizontal="@dimen/horizontal_padding"
                android:textColor="@color/dark_gray"
                android:textSize="15sp" />

        </soup.neumorphism.NeumorphCardView>

        <soup.neumorphism.NeumorphCardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="30dp"
            android:layout_weight="0.95"
            android:background="@drawable/ic_rect_text"
            app:neumorph_shapeType="flat">

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/name"
                android:paddingVertical="@dimen/vertical_padding"
                android:paddingHorizontal="@dimen/horizontal_padding"
                android:textColor="@color/dark_gray"
                android:textSize="15sp" />

        </soup.neumorphism.NeumorphCardView>

        <soup.neumorphism.NeumorphCardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="20dp"
            android:layout_weight="0.95"
            android:background="@drawable/ic_rect_text"
            app:neumorph_shapeType="flat">

            <EditText
                android:id="@+id/et_patronymic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/patronymic"
                android:paddingVertical="@dimen/vertical_padding"
                android:paddingHorizontal="@dimen/horizontal_padding"
                android:textColor="@color/dark_gray"
                android:textSize="15sp" />

        </soup.neumorphism.NeumorphCardView>

        <soup.neumorphism.NeumorphCardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="30dp"
            android:layout_weight="0.95"
            android:background="@drawable/ic_rect_text"
            app:neumorph_shapeType="flat">

            <EditText
                android:id="@+id/et_med"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/med"
                android:paddingVertical="@dimen/vertical_padding"
                android:paddingHorizontal="@dimen/horizontal_padding"
                android:textColor="@color/dark_gray"
                android:textSize="15sp" />

        </soup.neumorphism.NeumorphCardView>

        <soup.neumorphism.NeumorphCardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="20dp"
            android:layout_weight="0.95"
            android:background="@drawable/ic_rect_text"
            app:neumorph_shapeType="flat">

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/phone"
                android:inputType="phone"
                android:paddingVertical="@dimen/vertical_padding"
                android:paddingHorizontal="@dimen/horizontal_padding"
                android:textColor="@color/dark_gray"
                android:textSize="15sp" />

        </soup.neumorphism.NeumorphCardView>

        <ImageView
            android:layout_width="21.6dp"
            android:layout_height="6dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_chose_1"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

</LinearLayout>