<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AuthActivity"
    android:orientation="vertical"
    android:weightSum="100">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="22">
        <View
            android:id="@+id/union3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/img_3" />
        <View
            android:id="@+id/union2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/img_2" />
        <Button
            android:id="@+id/sign_up"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:background="@drawable/rec_white"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"/>
        <View
            android:id="@+id/sign_up_shadow"
            android:layout_width="150dp"
            android:layout_height="62dp"
            android:layout_marginTop="22dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/rec_gray" />
    </FrameLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"/>
    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:hint="@string/email"
        android:textSize="12sp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="#E9E7E7"
        android:inputType="textEmailAddress"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3" />
    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:layout_gravity="center"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="40dp"
        android:background="#E9E7E7"
        android:hint="@string/password"
        android:textSize="12sp"
        android:inputType="textPassword"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="12"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="13">

        <Button
            android:id="@+id/sign_in"
            android:layout_width="160dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="3dp"
            android:background="@drawable/rec"
            android:text="@string/sign_in"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <View
            android:id="@+id/sign_in_shadow"
            android:layout_width="160dp"
            android:layout_height="72dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@drawable/rec_gray"
            app:layout_constraintBottom_toBottomOf="parent" />
    </FrameLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="40">
        <View
            android:id="@+id/union"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="18dp"
            android:background="@drawable/img" />
        <View
            android:id="@+id/pulse"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@drawable/img_1" />
    </FrameLayout>

</LinearLayout>