<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.NotifyCreateFragment"
    android:background="@color/smoky_white"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/add_notify"
        android:textColor="@color/dark_gray"
        android:textStyle="bold"
        android:textSize="@dimen/text_size_heading"
        android:gravity="center"
        android:layout_gravity="center"
        android:paddingTop="15dp"
        android:paddingBottom="5dp"/>

    <soup.neumorphism.NeumorphCardView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_marginHorizontal="30dp"
    android:layout_marginTop="30dp"
    android:layout_marginBottom="10dp"
    android:layout_weight="1"
    android:background="@drawable/ic_rect_text"
    app:neumorph_shapeType="flat">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="center"
            android:text="@string/event_name"
            android:paddingVertical="@dimen/vertical_padding"
            android:paddingHorizontal="@dimen/horizontal_padding"
            android:textColor="@color/dark_gray"
            android:textSize="20sp"
            android:textStyle="bold"/>

    </soup.neumorphism.NeumorphCardView>

    <soup.neumorphism.NeumorphCardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="30dp"
        android:layout_weight="0.95"
        android:background="@drawable/ic_rect_text"
        app:neumorph_shapeType="flat">

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/event_name"
            android:paddingVertical="@dimen/vertical_padding"
            android:paddingHorizontal="@dimen/horizontal_padding"
            android:textColor="@color/dark_gray"
            android:textSize="15sp" />

    </soup.neumorphism.NeumorphCardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginHorizontal="30dp"
        android:paddingTop="5dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/event_date"
        android:paddingVertical="@dimen/vertical_padding_pressed"
        android:paddingHorizontal="@dimen/horizontal_padding_pressed"
        android:textColor="@color/dark_gray"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <soup.neumorphism.NeumorphCardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="30dp"
        android:paddingTop="5dp"
        android:layout_weight="1"
        app:neumorph_shapeType="pressed">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_day"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="15sp"
                android:hint="@string/day"
                android:paddingVertical="@dimen/vertical_padding_pressed"
                android:paddingHorizontal="@dimen/horizontal_padding_pressed"
                android:inputType="number"
                android:maxLength="2"/>

            <EditText
                android:id="@+id/et_month"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="15sp"
                android:hint="@string/month"
                android:paddingVertical="@dimen/vertical_padding_pressed"
                android:paddingHorizontal="@dimen/horizontal_padding_pressed"
                android:inputType="number"
                android:maxLength="2"/>

            <EditText
                android:id="@+id/et_year"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="15sp"
                android:hint="@string/year"
                android:paddingVertical="@dimen/vertical_padding_pressed"
                android:paddingHorizontal="@dimen/horizontal_padding_pressed"
                android:inputType="number"
                android:maxLength="4"/>

        </LinearLayout>

    </soup.neumorphism.NeumorphCardView>

    <soup.neumorphism.NeumorphCardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="35dp"
        android:layout_weight="1"
        android:background="@drawable/ic_rect_text"
        app:neumorph_shapeType="flat">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="center"
            android:text="@string/event_time"
            android:paddingVertical="@dimen/vertical_padding"
            android:paddingHorizontal="@dimen/horizontal_padding"
            android:textColor="@color/dark_gray"
            android:textSize="20sp"
            android:textStyle="bold" />

    </soup.neumorphism.NeumorphCardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp">

        <soup.neumorphism.NeumorphCardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/ic_rect_text"
            app:neumorph_shapeType="flat">

            <EditText
                android:id="@+id/et_hour"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center"
                android:hint="@string/time_hint"
                android:inputType="number"
                android:paddingVertical="@dimen/vertical_padding"
                android:paddingHorizontal="@dimen/horizontal_padding"
                android:textColor="@color/dark_gray"
                android:textSize="20sp" />

        </soup.neumorphism.NeumorphCardView>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text=":"
            android:gravity="center"
            android:textSize="40sp"
            android:textColor="#14142B"
            android:layout_margin="2dp"
            android:textStyle="bold"/>

        <soup.neumorphism.NeumorphCardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/ic_rect_text"
            app:neumorph_shapeType="flat">

        <EditText
            android:id="@+id/et_min"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="center"
            android:hint="@string/time_hint"
            android:inputType="number"
            android:paddingVertical="@dimen/vertical_padding"
            android:paddingHorizontal="@dimen/horizontal_padding"
            android:textColor="@color/dark_gray"
            android:textSize="20sp" />

        </soup.neumorphism.NeumorphCardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:layout_marginHorizontal="45dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="5dp">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <soup.neumorphism.NeumorphButton
                android:id="@+id/btn_back"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ic_rect_text"
                app:neumorph_shapeType="flat"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_left_arrow"
                android:layout_gravity="center" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <soup.neumorphism.NeumorphButton
                android:id="@+id/btn_add"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ic_rect_text"
                app:neumorph_shapeType="flat"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_plus"
                android:layout_gravity="center" />

        </FrameLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"/>

</LinearLayout>